# glacis

./: .dockerignore  .example.env  .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml
src/: config.py  main.py
src/flights/: api.py
src/templates/: error.html  flights.html  index.html
tests/: test_arrivals_jsonpath.py
tests/data/: arrivals.json
